--- a/config.json
+++ b/config.json
@@ -16,11 +16,11 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "─꯭─⃝‌‌𝐒𝐡𝐚𝐡𝐚𝐝𝐚𝐭 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+    "BOTNAME": "─꯭─⃝‌‌𝗔𝗡𝗜𝗞𝗔 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100001039692046",
-        "100001039692046",
+        "100088445331968",
+        "100088445331968",
         "100001039692046"
     ],
     "NDH": [
